--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,24 +1,21 @@
-# PowerDash Enablement Suite configuration
-app:
-  suite_name: "PowerDash Enablement"
-  org_name: "PowerDash HR"
-  storage_dir: ".data"
-
 ai:
-  default_provider: "mock"   # mock | openai
-  default_model: "gpt-5.2"   # future-proofed; provider may map/override
+  default_provider: "openai"
+  default_model: "gpt-4o"
+
   models:
-    - id: "gpt-5.2"
+    - id: "gpt-4o"
       label: "ChatGPT 5.2 (default)"
       provider: "openai"
-    - id: "gpt-4o"
-      label: "GPT-4o"
+
+    - id: "gpt-4.1-mini"
+      label: "Fast / low-cost"
       provider: "openai"
+
     - id: "mock"
       label: "Mock (offline)"
       provider: "mock"
 
   defaults:
     temperature: 0.2
-    response_length: "medium"   # short | medium | long
-    tone: "practical"           # practical | coaching | analytical
+    response_length: "medium"
+    tone: "practical"
